# rust-test-server

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.json  rustfmt.toml  test.rs
.github/workflows/: release.yml  rust.yml
src/: config.rs  handlers.rs  main.rs
src/facts/: config.rs  mod.rs
src/facts/adapters/: cat.rs  dog.rs  mod.rs
