[package]
name = "rust-test-server"
version = "0.1.0"
edition = "2021"
authors = ["Max Kalashnikoff <geekmaks@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.6"
hyper = "0.14"
mockito = "1.1"
rand = "0.8"
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
